# C_plus_plus

./: .gitignore
Geometry/: 1main.cpp  CMakeLists.txt  Geom  Geometry.cpp  Geometry.hpp  Makefile  a.out  main.cpp
Geometry/src/: CMakeLists.txt
Geometry/src/geometry/intersections/: Lines_intersection.cpp  Lines_intersection.h  Point_in_simplex.h  Point_in_triangle.cpp  Point_in_triangle.h  Segments_intersection.cpp  Segments_intersection.h
Geometry/src/geometry/operations/: Determinant.cpp  Determinant.h  Dot.cpp  Dot.h  Scalar_product.h
Geometry/src/geometry/primitives/: Line.h  Matrix.h  Point.h  Segment.h  Simplex.h  Triangle.h  Vector.cpp  Vector.h
Geometry/tests/: CMakeLists.txt  test_vector.cpp
Geometry_correct/: 1main.cpp  CMakeLists.txt  Determinant.cpp  Determinant.h  Geometry.cpp  Geometry.h  Line.h  Lines_intersection.h  Operator_minus.cpp  Operator_minus.h  Point.h  Point_in_triangle.h  Point_on_intersection.cpp  Point_on_intersection.h  Point_on_sections.h  Segments_intersection.h  Vector.h
Geometry_correct/src/: CMakeLists.txt  Determinant.h  Intersection.h  Lines_intersection.cpp  Point_in_triangle.cpp  Scalar_product.h  Segment.h  Segments_intersection.cpp  Vector.cpp
Metaprogramming/: CMakeLists.txt
Metaprogramming/src/: CMakeLists.txt
Metaprogramming/tests/: CMakeLists.txt  test_contain.cpp
Project_3_semestr/: CMakeLists.txt
lines/: Determinant.cpp  Determinant.h  Line.h  Point.h  Point_on_intersection.cpp  Point_on_intersection.h  Point_on_sections.cpp  Point_on_sections.h  Scalar_product.cpp  Scalar_product.h  Vector.h
(+16 files in other folders)
